[package]
name = "jolteon"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.0.11"
serde_json = "1"
console_error_panic_hook = "0.1.1"
ed25519-dalek = "1"
hex = "0.4"
twilight-model = "0.13"
serde = { version = "1", features = ["derive"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
