[package]
name = "jolteon"
version = "0.0.0"
edition = "2021"
description = "A slash-command based discord tag bot"
repository = "https://github.com/randomairborne/jolteon"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.0.11"
serde_json = "1"
console_error_panic_hook = "0.1.1"
ed25519-dalek = "2"
hex = "0.4"
twilight-model = "0.13"
twilight-util = { version = "0.13", features = ["builder"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"



[profile.release]
opt-level = "s"
