[package]
name = "jolteon"
version = "0.0.0"
edition = "2021"
description = "A slash-command based discord tag bot"
repository = "https://github.com/randomairborne/jolteon"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
twilight-util = { version = "0.13", features = ["builder"] }
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
twilight-model = "0.13"
ed25519-dalek = "2"
worker = "0.0.12"
serde_json = "1"
thiserror = "1"
hex = "0.4"

[profile.release]
opt-level = "s"
